# waikay-mcp

./: .gitignore  README.md  pyproject.toml
waikay_mcp/: server.py
