[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waikay-mcp"
version = "0.2.0"
description = "MCP server for the Waikay brand visibility API"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
waikay-mcp = "waikay_mcp:main"

[project.urls]
Homepage = "https://github.com/DixonJones/waikay-mcp"
Issues = "https://github.com/DixonJones/waikay-mcp/issues"
